@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix crash on invalid bulletwalls.
+ server/time.c: ensure other_arch is not NULL.
+Nicolas Weeger 2008-01-03
+
 Fix plugin-related potential crash.
  server/plugins.c: ensure msg has a newline at the end, else bad things happen.
 Nicolas Weeger 2008-01-03
